Добавлена стастистика для пользователей
