# Models/Term.cs
@@ -1,22 +1,21 @@
-﻿using System.Text.Json.Serialization;
-namespace Gerdt_LR1.Models
+﻿namespace Gerdt_LR1.Models
 {
     public enum Direction { EnToRu, RuToEn }
+    public enum TermDomain
+    {
+        General,      // общее
+        Drilling,     // бурение
+        Geology,      // геология
+        Equipment,    // оборудование
+        Safety        // безопасность
+    }
     public class Term
     {
         public int Id { get; set; }
         public string En { get; set; } = "";
         public string Ru { get; set; } = "";
-        public string? Domain { get; set; }
+        public TermDomain Domain { get; set; }
 
-
-        // Бизнес-логика: обновить перевод с учётом направления
-        public void UpdateTranslation(Direction direction, string newValue)
-        {
-            if (string.IsNullOrWhiteSpace(newValue)) return;
-            if (direction == Direction.EnToRu) Ru = newValue.Trim();
-            else En = newValue.Trim();
-        }
 
         // Бизнес-логика: получить перевод в нужном направлении
         public string Translate(Direction direction) => direction == Direction.EnToRu ? Ru : En;
